[package]
name = "rust-solana-proto"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
solana-program = "=1.18.20"
solana-client = "=1.18.20"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
spl-token = ">=3.5.0, <5.0"
spl-associated-token-account = ">=1.1.3, <3.0"
mpl-token-metadata = "4.1.2"

[[bin]]
name = "balance"
path = "src/balance.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "token_balance"
path = "src/token_balance.rs"
